Working on creating a Dockerfile which will standup logstash to process data.  I need to augment conf file to tweak ingestion location AND target elasticsearch ip location

--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -3,7 +3,10 @@ input {
 		mode => "read"
 		file_completed_action => "delete"
 		path => ["/media/pi/Elements/data/**/*.txt"]
-		
+		codec => plain {
+			charset => "ISO-8859-1"
+		}
+		sincedb_path => ["/media/pi/Elements/work/sincedb_path_file"]
 	}
 }
 filter {
