Updates to DockerFile, conf file, and added a brief readme.

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,11 +2,13 @@ input {
 	file {
 		mode => "read"
 		file_completed_action => "delete"
-		path => ["/media/pi/Elements/data/**/*.txt"]
+		file_chunk_size => 1048576
+		max_open_files => 100
+		path => ["/usr/share/logstash/files_root/**/*.txt", "/media/pi/Elements/data/**/*.txt"]
 		codec => plain {
 			charset => "ISO-8859-1"
 		}
-		sincedb_path => ["/media/pi/Elements/work/sincedb_path_file"]
+		sincedb_path => ["/usr/share/logstash/since_db_path/file"]
 	}
 }
 filter {
@@ -15,7 +17,7 @@ filter {
 	}
 	grok {
 		match => {
-			"message" => "%{DATA:user}[:;]%{GREEDYDATA:password}"
+			"message" => "%{DATA:username}[:;]%{GREEDYDATA:password}"
 		}
 	}
 	mutate {
